quer/public/css/home.css
body{
    font-family: "Helvetica Neue", sans-serif;
    margin: 0 !important;
    padding: 0 !important;

}

.home_banner{
    background-image: url('');
    background-repeat:no-repeat;
    background-size: cover;
    background-position:center;
    margin: 0 ;

    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -2;


}

.home_navigation{
    width:100%;
    height:100px;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
    background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */

}

.home-nav-right {
    float: right;
    font-size: 1.5em;
    list-style-type: none;
    padding-right: 15px;
    margin: 0;
    margin-top: 20px;
}

.home-nav-right li {
    display: inline-block;
    vertical-align: middle;

}
.home-nav-right li a {
    text-decoration: none;
    color:white;

}
.home-nav-left{
    padding-left: 15px;
    color:white;
    float: left;
    font-size: 2em;
    list-style-type: none;
    margin: 0;
    margin-top: 20px;


}

.home-nav-left  li{
    display: inline-block;
    vertical-align: middle;

}

.home-search ul li{

}

.home-center-content{
    width: 65%;
    margin: 0 auto;
    position: relative;
    top: 12.5%;
    z-index: 4;

}

.home-center-content ul{
width: 100%;

}
.home-center-content ul li{
display: inline-block;
float: left;
}
.searchbox{
    z-index: 45;
    background-image: url('../images/icons/searchicon.png');
    width: 100%;

    box-sizing: border-box;
    border: 0px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    background-size: 22px 22px;
    background-position: 10px 10px;
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;

}
.datepicker {
    background-image: url('../images/icons/dropdownicon.png');
    width: 100%;
    border-radius: 4px;
    padding: 12px 40px 12px 20px;
    box-sizing: border-box;
    border: 0px solid #ccc;
    font-size: 16px;
    background-color: white;
    background-size: 22px 22px;
    background-position:right 10px center;
    background-repeat: no-repeat;
}
.searchbutton{
    padding: 12px 20px 12px 20px;
    box-sizing: border-box;
    font-size: 16px;
    border: 0px solid #ccc;
    background-color: #3432d5;
    color: white;
    width: 100%;
    overflow: hidden;
    border-radius: 4px;
}



form{
   /* display:table;*/
    margin:auto;

}

.searchdiv{
    width: 50%;
    float: left;
    margin-right: 0.5%;
}

.datediv{
    width: 16%;
float: left;
    margin-right: 0.5%;
}

.submitsearchdiv{
    width:15%;
float: left;
}
@media screen and (min-width: 1000px) and ( max-width: 1400px) {
    .searchdiv{
        width: 100%;
        float: left;
        margin-right: 0;
    }
    .datediv{
        margin-top: 2%;
        width: 49%;
        float: left;
        margin-right: 1%;
    }
    .datediv ~ .datediv{
        margin-top: 2%;
        width: 49%;
        float: right;
        margin-right: 0;
    }
    .submitsearchdiv{
        margin-top: 2%;
        width:100%;
        float: left;
    }
}
@media screen and (min-width: 0px) and ( max-width: 1000px) {
    .searchdiv{
        width: 100%;
        float: left;
        margin-right: 0;
    }
    .datediv{
        margin-top: 2%;
        width: 49%;
        float: left;
        margin-right: 1%;
    }
    .datediv ~ .datediv{
        margin-top: 2%;
        width: 49%;
        float: right;
        margin-right: 0;
    }
    .submitsearchdiv{
        margin-top: 2%;
        width:100%;
        float: left;
    }

    .home-center-content{
        width: 95%;


    }
}
#inspirational-quote {
    color:white;
    text-align: center;
    margin-bottom: 5%;
}




/*////////////////////////////////////////////*/

.content-wrapper{
    position: absolute;
    top: 100%;
    width: 100%;
    height: auto;
}

.content-center{
    width: 65%;
    margin: 0 auto;
}

footer{
    width:100%;
    height: 150px;
    background-color: #303130;
    color: #b9b9b9;
    float:left;
}
@media screen and (min-width: 0px) and ( max-width: 700px) {
    .content-center {
        width: 100%;
    }
}

@media screen and (min-width: 700px) and ( max-width: 1400px) {
    .content-center {
        width: 80%;
    }
}
/*
////////////////////////////////////////////*/
h1 {
    text-align: center;
    font-size: 2em;
    float:left;
    width: 100%;
}

.homepage-events-repeated{
    width: 33%;
    float: left;
    height: 220px;
    overflow: hidden;
    min-width: 280px;
    margin: 0 auto;

    background-repeat:no-repeat !important;
    background-size: cover !important;;
    background-position:center !important;;

}


.homepage-events-gradient{
     width: 100% !important;
     height: 100%;
     background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 65%);
     background: linear-gradient(to top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 65%);
    clear: both;
 }

.homepage_first-event{
    width: 66%;
    height: 440px;
    min-width: 560px;
}

.homepage-events {

     margin-bottom: 50px;
     width: 100%;
     height: auto;
 }

.homepage-events div:not(:first-child) h2{
    top: 40%;
    width: 100%;
    position: relative;
    color:white;
    text-align: center;
    font-size: 2em;
}
.homepage_first-event h2{
    top: 55%;
    width: 100%;
    position: relative;
    color:white;
    text-align: center;
    font-size: 3em;
}
.homepage-events div:not(:first-child) .event-date{
    color: #ececec;
    font-weight: bold;
    text-align: center;
    position: relative;
    top: 15%;
}

.homepage-events div:not(:first-child) .event-location{
    color: #ececec;
    font-weight: bold;
    text-align: center;
    position: relative;

    top: 42%;
    font-size: 0.8em;
}

.homepage-events div:not(:first-child) .event-city{
    color: #ececec;
    font-weight: bold;
    font-size: 0.8em;
    text-align: right;
    position: relative;
    right: 2%;
    top: 29%;
}

@media screen and (min-width: 0px) and ( max-width: 700px) {
    .homepage-events-repeated{
        width: 100%;

        height: 220px;

        min-width: 90%;


    }
}

@media screen and (min-width: 700px) and ( max-width: 1000px) {
    .homepage-events-repeated{
        width: 50%;

        height: 220px;

        min-width: 50%;


    }
}

@media screen and (min-width: 1000px) and ( max-width: 1400px) {
    .homepage-events-repeated{
        width: 50%;

        height: 220px;

        min-width: 50%;


    }
}
.homepage-adverts div{
    width: 33%;
    float: left;
    height: 280px;
    overflow: hidden;
    min-width: 300px;
    margin: 0 auto;
    background-repeat:no-repeat !important;
    background-size: cover !important;;
    background-position:center !important;;


}

.homepage-adverts-gradient{
    width: 100% !important;
    height: 100%;
    background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 65%);
    background: linear-gradient(to top,  rgba(0,0,0,0.90) 0%,rgba(0,0,0,0) 65%);
}

.homepage-adverts {
    clear:both;
    margin-top: 50px;
    margin-bottom: 50px;
    overflow: hidden;
}

.homepage-adverts img{
    min-width: 100%;
    min-height: 100%;
    position: relative;
    left: 50%;
    top: 50%;
    /* onderstaant moet nog aangepast worden */
    -webkit-transform: translateY(-50%) translateX(-50%);


}
.homepage-adverts div h2 {
     position: relative;
     top: 50%;

     text-align: center;


 }

.homepage-adverts div h2 a{
    position: relative;
    top: 50%;
    text-decoration: none;
    color: white;
    text-align: center;
    color: white;

}
.homepage-adverts div ul  {
  position: relative;
    top: 50%;


}
.homepage-adverts div ul li {
    display: inline-block;
    color: white;

    font-weight: bold;
}

.homepage-adverts div ul li:last-child {
    position: absolute;
    right: 20px;
    bottom: 0;
}
.homepage-adverts div ul img{
    position: relative;
  width: 40px;
    top: 40px;
    left: 8px;
    -webkit-clip-path: circle(40% at 50% 50%);
    clip-path: circle(40% at 50% 50%);
}

@media screen and (min-width: 0px) and ( max-width: 700px) {
    .homepage-adverts div{
        width: 100%;


        min-width: 100%;



    }
}

@media screen and (min-width: 700px) and ( max-width: 1400px) {

    .homepage-adverts div{
        width: 50%;

        overflow: hidden;
        min-width: 50%;



    }
}

